unpackaged/main/default/objects/Business_Credit_Summary__c/Business_Credit_Summary__c.object-meta.xml
<CustomObject>
    <label>Business Credit Summary</label>
    <nameField>
        <displayFormat>BCS-{0000000}</displayFormat>
        <label>Business Credit Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Credit Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>