unpackaged/main/default/objects/Business_Credit_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Credit Summaries</relationshipLabel>
    <relationshipName>Business_Credit_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>