unpackaged/main/default/objects/Business_Credit_Summary__c/fields/ActiveBusinessIndicator__c.field-meta.xml
<CustomField>
    <fullName>ActiveBusinessIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if a business is Active.  The data in this field will be derived from the Experian Business report for the business.</description>
    <inlineHelpText>This field will indicate if a business is Active.  The data in this field will be derived from the Experian Business report for the business.</inlineHelpText>
    <label>ActiveBusinessIndicator</label>
    <type>Checkbox</type>
</CustomField>