unpackaged/main/default/objects/Business_Credit_Summary__c/fields/BankruptcyDischargeDate__c.field-meta.xml
<CustomField>
    <fullName>BankruptcyDischargeDate__c</fullName>
    <label>Bankruptcy Discharge Date</label>
    <type>Date</type>
</CustomField>