unpackaged/main/default/objects/Business_Credit_Summary__c/fields/BISListNumber__c.field-meta.xml
<CustomField>
    <fullName>BISListNumber__c</fullName>
    <description>Creates Experian BISListNumber from the File Number and Sequence Number returned from a List of Similars request</description>
    <formula>Business_Credit_Id__c +  Sequence_Number__c</formula>
    <label>BISListNumber</label>
    <type>Text</type>
</CustomField>