unpackaged/main/default/objects/Business_Credit_Summary__c/fields/BK_Count__c.field-meta.xml
<CustomField>
    <fullName>BK_Count__c</fullName>
    <label>BK Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>