unpackaged/main/default/objects/Business_Credit_Summary__c/fields/Business_Credit_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Credit_Id__c</fullName>
    <label>Business Credit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>