unpackaged/main/default/objects/Business_Credit_Summary__c/fields/Collections__c.field-meta.xml
<CustomField>
    <fullName>Collections__c</fullName>
    <label>Collections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>