unpackaged/main/default/objects/Business_Credit_Summary__c/fields/ContinuousTradeBalance__c.field-meta.xml
<CustomField>
    <fullName>ContinuousTradeBalance__c</fullName>
    <label>ContinuousTradeBalance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>