unpackaged/main/default/objects/Business_Credit_Summary__c/fields/ContinuousTrades__c.field-meta.xml
<CustomField>
    <fullName>ContinuousTrades__c</fullName>
    <label>ContinuousTrades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>