unpackaged/main/default/objects/Business_Credit_Summary__c/fields/CreditLimitRecommendation__c.field-meta.xml
<CustomField>
    <fullName>CreditLimitRecommendation__c</fullName>
    <label>CreditLimitRecommendation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>