unpackaged/main/default/objects/Business_Credit_Summary__c/fields/DateOfIncorporation__c.field-meta.xml
<CustomField>
    <fullName>DateOfIncorporation__c</fullName>
    <label>DateOfIncorporation</label>
    <type>Date</type>
</CustomField>