unpackaged/main/default/objects/Business_Credit_Summary__c/fields/Efx_Candidate_Id__c.field-meta.xml
<CustomField>
    <fullName>Efx_Candidate_Id__c</fullName>
    <description>Equifax Commercial Candidate Id from Expanded Match</description>
    <label>Equifax Candidate Id</label>
    <type>TextArea</type>
</CustomField>