unpackaged/main/default/objects/Business_Credit_Summary__c/fields/Efx_Report_Link__c.field-meta.xml
<CustomField>
    <fullName>Efx_Report_Link__c</fullName>
    <description>Link to generated Equifax Commercial Report</description>
    <label>Equifax Report Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>