unpackaged/main/default/objects/Business_Credit_Summary__c/fields/EfxId__c.field-meta.xml
<CustomField>
    <fullName>EfxId__c</fullName>
    <description>Equifax Commercial Id</description>
    <label>Equifax Id</label>
    <type>TextArea</type>
</CustomField>