unpackaged/main/default/objects/Business_Credit_Summary__c/fields/EXP_Biz_TransactionId__c.field-meta.xml
<CustomField>
    <fullName>EXP_Biz_TransactionId__c</fullName>
    <label>EXP Biz TransactionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>