unpackaged/main/default/objects/Business_Credit_Summary__c/fields/HighRiskAlerts__c.field-meta.xml
<CustomField>
    <fullName>HighRiskAlerts__c</fullName>
    <label>HighRiskAlerts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>