unpackaged/main/default/objects/Business_Credit_Summary__c/fields/OpenPublicRecordBalance__c.field-meta.xml
<CustomField>
    <fullName>OpenPublicRecordBalance__c</fullName>
    <label>Open Public Record Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>