unpackaged/main/default/objects/Business_Credit_Summary__c/fields/Phone_Match__c.field-meta.xml
<CustomField>
    <fullName>Phone_Match__c</fullName>
    <description>Phone Number Match Quality Indicator of the Expanded Match Similar the report is based on.</description>
    <label>Phone Match</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exact</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>No Match</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>