unpackaged/main/default/objects/Business_Credit_Summary__c/fields/PossibleOFACMatch__c.field-meta.xml
<CustomField>
    <fullName>PossibleOFACMatch__c</fullName>
    <label>PossibleOFACMatch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>