unpackaged/main/default/objects/Business_Credit_Summary__c/fields/SICCode__c.field-meta.xml
<CustomField>
    <fullName>SICCode__c</fullName>
    <label>SIC Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>