unpackaged/main/default/objects/Business_Credit_Summary__c/fields/TotalTrades__c.field-meta.xml
<CustomField>
    <fullName>TotalTrades__c</fullName>
    <label>TotalTrades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>