unpackaged/main/default/objects/Business_Credit_Summary__c/fields/UCCFilings__c.field-meta.xml
<CustomField>
    <fullName>UCCFilings__c</fullName>
    <label>UCC Filings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>