unpackaged/main/default/objects/Business_Credit_Summary__c/fields/URL_for_View_Link__c.field-meta.xml
<CustomField>
    <fullName>URL_for_View_Link__c</fullName>
    <formula>'file://s44/EXP/' + TEXT(YEAR(Transaction_Date__c)) + '/' + TEXT(MONTH(Transaction_Date__c)) + '/ExpBizReport__' + CASESAFEID(Id) + '_' + 
TEXT(YEAR(Transaction_Date__c)) + '.' + TEXT(MONTH(Transaction_Date__c)) +'.' + TEXT(DAY(Transaction_Date__c)) +  '.pdf'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL for View Link</label>
    <type>Text</type>
</CustomField>