unpackaged/main/default/objects/Business_Credit_Summary__c/fields/YearsOnFile__c.field-meta.xml
<CustomField>
    <fullName>YearsOnFile__c</fullName>
    <label>Years on File</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>