unpackaged/main/default/objects/Business_Credit_Summary__c/recordTypes/Equifax_Commercial.recordType-meta.xml
<RecordType>
    <fullName>Equifax_Commercial</fullName>
    <active>true</active>
    <description>Indicates that the record is full an Equifax Commercial credit pull</description>
    <label>Equifax Commercial</label>
</RecordType>