unpackaged/main/default/objects/Business_Credit_Summary__c/recordTypes/Experian_Commercial.recordType-meta.xml
<RecordType>
    <fullName>Experian_Commercial</fullName>
    <active>true</active>
    <description>Indicates that this record is from a Experian Commercial credit pull</description>
    <label>Experian Commercial</label>
</RecordType>